Додає модальне вікно та переходи

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,16 @@
           <ul class="projects list">
             <li class="projects-item">
               <a class="projects-link link" href="">
-                <img src="./images/portfolio-1.jpg" alt="Ноутбук" width="370" />
+                <div class="thumb">
+                  <img src="./images/portfolio-1.jpg" alt="Ноутбук" width="370" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-footer">
                   <h2 class="name link">Технокряк</h2>
                   <p class="text">Веб-сайт</p>
@@ -108,11 +117,20 @@
             </li>
             <li class="projects-item">
               <a class="projects-link link" href="">
-                <img
-                  src="./images/portfolio-2.jpg"
-                  alt="Два гравця в баскетбол"
-                  width="370"
-                />
+                <div class="thumb">
+                  <img
+                    src="./images/portfolio-2.jpg"
+                    alt="Два гравця в баскетбол"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-footer">
                   <h2 class="name">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -123,11 +141,20 @@
             </li>
             <li class="projects-item">
               <a class="projects-link link" href="">
-                <img
-                  src="./images/portfolio-3.jpg"
-                  alt="Напис на фоні риби"
-                  width="370"
-                />
+                <div class="thumb">
+                  <img
+                    src="./images/portfolio-3.jpg"
+                    alt="Напис на фоні риби"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-footer">
                   <h2 class="name">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="text">Додаток</p>
@@ -136,11 +163,20 @@
             </li>
             <li class="projects-item">
               <a class="projects-link link" href="">
-                <img
-                  src="./images/portfolio-4.jpg"
-                  alt="Бездротові навушники"
-                  width="370"
-                />
+                <div class="thumb">
+                  <img
+                    src="./images/portfolio-4.jpg"
+                    alt="Бездротові навушники"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-footer">
                   <h2 class="name">Проєкт <span lang="en">Prime</span></h2>
                   <p class="text">Маркетинг</p>
@@ -149,11 +185,20 @@
             </li>
             <li class="projects-item">
               <a class="projects-link link" href="">
-                <img
-                  src="./images/portfolio-5.jpg"
-                  alt="Дві коробки. Більша білого кольору, менша крафтового."
-                  width="370"
-                />
+               <div class="thumb">
+                  <img
+                    src="./images/portfolio-5.jpg"
+                    alt="Дві коробки. Більша білого кольору, менша крафтового."
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+               </div>
                 <div class="card-footer">
                   <h2 class="name">Проєкт <span lang="en">Boxes</span></h2>
                   <p class="text">Додаток</p>
@@ -162,11 +207,20 @@
             </li>
             <li class="projects-item">
               <a class="projects-link link" href="">
-                <img
-                  src="./images/portfolio-6.jpg"
-                  alt="Монітор Apple"
-                  width="370"
-                />
+                <div class="thumb">
+                  <img
+                    src="./images/portfolio-6.jpg"
+                    alt="Монітор Apple"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-footer">
                   <h2 lang="en" class="name">Inspiration has no Borders</h2>
                   <p class="text">Веб-сайт</p>
@@ -175,11 +229,20 @@
             </li>
             <li class="projects-item">
               <a class="projects-link link" href="">
-                <img
-                  src="./images/portfolio-7.jpg"
-                  alt="Розгорнутий журнал"
-                  width="370"
-                />
+                <div class="thumb">
+                  <img
+                    src="./images/portfolio-7.jpg"
+                    alt="Розгорнутий журнал"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-footer">
                   <h2 class="name">
                     Видання <span lang="en">Limited Edition</span>
@@ -190,11 +253,20 @@
             </li>
             <li class="projects-item">
               <a class="projects-link link" href="">
-                <img
-                  src="./images/portfolio-8.jpg"
-                  alt="Картонний ярлик з надписом"
-                  width="370"
-                />
+                <div class="thumb">
+                  <img
+                    src="./images/portfolio-8.jpg"
+                    alt="Картонний ярлик з надписом"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-footer">
                   <h2 class="name">Проєкт <span lang="en">LAB</span></h2>
                   <p class="text">Маркетинг</p>
@@ -203,11 +275,20 @@
             </li>
             <li class="projects-item">
               <a class="projects-link link" href="">
-                <img
-                  src="./images/portfolio-9.jpg"
-                  alt="Людина працює за ноутбуком"
-                  width="370"
-                />
+                <div class="thumb">
+                  <img
+                    src="./images/portfolio-9.jpg"
+                    alt="Людина працює за ноутбуком"
+                    width="370"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-footer">
                   <h2 lang="en" class="name">Growing Business</h2>
                   <p class="text">Додаток</p>
@@ -222,7 +303,9 @@
     <footer class="footer">
       <div class="footer-container container">
         <div class="footer-box">
-          <a href="./index.html" class="logo link">Web<span class="accent-footer">Studio</span></a>
+          <a href="./index.html" class="logo link"
+            >Web<span class="accent-footer">Studio</span></a
+          >
           <!-- Address -->
           <address class="address">
             <ul class="list">
@@ -231,7 +314,8 @@
                   href="https://goo.gl/maps/iMAEv3VVGmUvrYKr9"
                   target="_blank"
                   rel="noreferrer noopener nofollow"
-                  class="map link">
+                  class="map link"
+                >
                   м. Київ, пр-т Лесі Українки, 26
                 </a>
               </li>
@@ -257,7 +341,8 @@
                 aria-label="Іконка Instagram"
                 href=""
                 target="_blank"
-                rel="noopener noreferrer">
+                rel="noopener noreferrer"
+              >
                 <svg class="social-icon" width="20" height="20">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
@@ -269,7 +354,8 @@
                 aria-label="Іконка Twitter"
                 href=""
                 target="_blank"
-                rel="noopener noreferrer">
+                rel="noopener noreferrer"
+              >
                 <svg class="social-icon" width="20" height="20">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
@@ -281,7 +367,8 @@
                 aria-label="Іконка Facebook"
                 href=""
                 target="_blank"
-                rel="noopener noreferrer">
+                rel="noopener noreferrer"
+              >
                 <svg class="social-icon" width="20" height="20">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
@@ -293,7 +380,8 @@
                 aria-label="Іконка Linkedin"
                 href=""
                 target="_blank"
-                rel="noopener noreferrer">
+                rel="noopener noreferrer"
+              >
                 <svg class="social-icon" width="20" height="20">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
