--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="btn">Замовити послугу</button>
+          <button class="btn" type="button" data-modal-open>Замовити послугу</button>
         </div>
       </section>
       <!-- Our benefits -->
@@ -144,6 +144,7 @@
                 width="370"
                 height="294"
               />
+              <p class="undertext">Десктопні додати</p>
             </li>
             <li class="item">
               <img
@@ -152,6 +153,7 @@
                 width="370"
                 height="294"
               />
+              <p class="undertext">Мобільні додатки</p>
             </li>
             <li class="item">
               <img
@@ -160,6 +162,7 @@
                 width="370"
                 height="294"
               />
+              <p class="undertext">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
@@ -586,5 +589,16 @@
         </div>
       </div>
     </footer>
+<div class="backdrop is-hidden" data-modal>
+  <div class="modal">
+    <button class="modal-btn" data-modal-close>
+      <svg class="icon-close" width="11" height="11">
+        <use href="./images/sprite.svg#icon-close"></use>
+      </svg>
+    </button>
+  </div>
+</div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
